# CppBenchmark

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
scripts/: macos_setup.sh
src/: .clang-format  CMakeLists.txt
src/include/application/: Application.hpp  ApplicationSettings.hpp
src/include/config/: ConfigRegistry.hpp  ConfigVariable.hpp
src/include/coroutines/: Generator.hpp
src/include/math/: Hash.hpp
src/include/profiling/: IProfileOutput.hpp  ProfileBackend.hpp  ProfileGuard.hpp  ProfileMark.hpp  ProfileMarks.hpp  ProfileOutputFactory.hpp  ProfileSettings.hpp  Profiler.hpp  StreamOutput.hpp
src/include/reflection/: AggregateTypeVisitor.hpp  MemberCount.hpp
src/include/resources/: Image.hpp  Resource.hpp  ResourceFactory.hpp  ResourceHandler.hpp  ResourceId.hpp  ResourceLoadRequest.hpp  ResourceLoader.hpp  ResourceManager.hpp
src/include/scheduling/: Definitionts.hpp  ScheduleManager.hpp  ScheduleSettings.hpp  Scheduler.hpp  ThreadCommunication.hpp  Worker.hpp  WorkerBase.hpp
src/include/std_helpers/: Visitor.hpp
src/include/storage/: FileSystemStorage.hpp  WebStorage.hpp
src/src/application/: Application.cpp  ApplicationWorker.cpp  ApplicationWorker.hpp
src/src/config/: ConfigRegistry.cpp
src/src/profiling/: Profiler.cpp  StreaOutput.cpp
src/src/resources/: ImageResourceFactory.cpp  ResourceLoader.cpp
src/src/scheduling/: Scheduler.cpp  Worker.cpp  WorkerBase.cpp
src/src/storage/: FileSystemStorage.cpp
src/tests/: CMakeLists.txt
src/tests/benchmarks/: CMakeLists.txt  ConfigRegistry.cpp
src/tests/benchmarks/config/: ConfigRegistry.cpp
src/tests/benchmarks/scheduling/: Scheduler.cpp
src/tests/gtests/: CMakeLists.txt
src/tests/gtests/math/: Hash.cpp
src/tests/gtests/reflection/: AggregateTypeVisitor.cpp  MemberCount.cpp
src/tests/gtests/scheduling/: Scheduler.cpp
